--- a/build-pipeline/jenkinsfile
+++ b/build-pipeline/jenkinsfile
@@ -1,10 +1,10 @@
 pipeline {
     environment {
-        app_name = ${app_name}
-        git_apps_branch = ${git_apps_branch}
-        env_name = ${env_name}
-        vault_env_name = ${vault_env_name}
-        scan_code = ${ScanCode}
+        app_name = "${app_name}"
+        git_apps_branch = "${git_apps_branch}"
+        env_name = "${env_name}"
+        vault_env_name = "${vault_env_name}"
+        scan_code = "${ScanCode}"
     }
     stage 'Stage 1'
     echo "Print log app_name = ${app_name}"
