--- a/build-pipeline/jenkinsfile
+++ b/build-pipeline/jenkinsfile
@@ -1,5 +1,5 @@
 pipeline {
-    agent { label 'k8s-aws-dev' }
+    agent any
     environment {
         app_name = "${app_name}"
         git_apps_branch = "${git_apps_branch}"
