--- a/build-pipeline/jenkinsfile
+++ b/build-pipeline/jenkinsfile
@@ -1,9 +1,13 @@
 pipeline {
-    agent {
-        docker { image 'node:18.16.0-alpine' }
-    }
+    agent any
     stages {
         stage('Test') {
+            agent {
+                docker { 
+                    image 'node:18.16.0-alpine'
+                    args '-u 0:0'
+                }
+            }
             steps {
                 sh 'node --version'
             }
