--- a/build-pipeline/jenkinsfile
+++ b/build-pipeline/jenkinsfile
@@ -1,28 +1,15 @@
 pipeline {
- 
-    agent none
- 
     environment {
-        NODE_IMAGE = 'node:12.13.0'
-        NODE_IMAGE_ARGS = '-u 0:0'
-    }    
- 
+        app_name = "${app_name}"
+    }
+    options {
+        ansiColor('xterm')
+    }
+    agent any
     stages {
- 
-        stage('Yarn Install') {
- 
-            agent {
-                docker {
-                    image "${env.NODE_IMAGE}"
-                    args "${env.NODE_IMAGE_ARGS}"
-                }
-            }
- 
+        stage('Sync git') {
             steps {
-                echo 'Yarn Install'
-                echo '******************************'  
-                sh 'node --version'
-                sh 'yarn --version'
+                echo "app_name = ${app_name}"
             }
         }
     }    
