--- a/build-pipeline/jenkinsfile
+++ b/build-pipeline/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
         stage('Sync git') {
             steps {
                 echo "app_name = ${app_name}"
-                build(job: 'AP1010-CHAT/DevOps/GIT-SYNC/git_sync_ap1010-SCBConnect')
+                build(job: 'My-pipeline')
             }
         }
     }    
